--- a/gb/24/1/21/n14163556.md
+++ b/gb/24/1/21/n14163556.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>王友群：为何有一百多国政要祝贺台湾大选？</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/01/id14163557-GettyImages-1922135631-600x400-1.jpg" />
-<h6>1月13日，台湾民进党总部外大屏幕显示赖清德和萧美琴当选正、副总统。(Yasuyoshi Chiba/AFP via Getty Images)
+<h6>2024年1月13日，台湾民进党总部外大屏幕显示赖清德和萧美琴当选正、副总统。(Yasuyoshi Chiba/AFP via Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2024年01月22日讯】据台湾《经济日报》报导，至1月19日，全球已有超过106个国家、近1,400名政要对<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE%E5%A4%A7%E9%80%89.md#1">台湾大选</a>表示祝贺，包括美国、英国、法国、德国、意大利、日本、加拿大、欧盟等。</p>
-<p>这是1996年台湾直选总统以来外国<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%94%BF%E8%A6%81%E7%A5%9D%E8%B4%BA.md#1">政要祝贺</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE%E5%A4%A7%E9%80%89.md#1">台湾大选</a>人数最多的一次。</p>
+	<p>【大纪元2024年01月22日讯】据台湾《经济日报》报导，至1月19日，全球已有超过106个国家、近1,400名政要对台湾大选表示祝贺，包括美国、英国、法国、德国、意大利、日本、加拿大、欧盟等。</p>
+<p>这是1996年台湾直选总统以来外国政要祝贺台湾大选人数最多的一次。</p>
 <p>其中一些政要，如美国国务卿布林肯、日本外相上川阳子、菲律宾总统小马科斯等，除了祝台湾大选成功外，还祝贺赖清德当选台湾总统。</p>
 <p>1月14日，台湾大选落幕的第二天，在美国在台协会主席罗森伯格（Laura Rosenberger）陪同下，共和党籍的美国前国家安全顾问哈德利（Stephen Hadley ）、民主党籍的前副国务卿斯坦博格（James Steinberg）访问台北。一方面，对台湾大选表达祝贺；另一方面，表达美国对台湾的坚定支持。</p>
-<p>为什么今年有一百多国<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%94%BF%E8%A6%81%E7%A5%9D%E8%B4%BA.md#1">政要祝贺</a>台湾大选？</p>
+<p>为什么今年有一百多国政要祝贺台湾大选？</p>
 <p>我认为，主要有以下四个原因：</p>
 <h2><strong>第一，台湾政治上更加民主。</strong></h2>
 <p>台湾不仅成为华人世界自由民主的灯塔，也成了整个自由世界民主的典范。</p>
@@ -23,15 +23,15 @@
 <p>自由、民主已经成了台湾人日常生活的一部分。</p>
 <h2><strong>第二，台湾经济上成就惊人。</strong></h2>
 <p>台湾的土地面积全球排名第147，人口2,326万人，全球第57；但是，2023年，台湾的GDP总量全球第21，台湾的出口4,797亿美元，全球第17；台湾股市总市值1.7兆美元，全球第14。</p>
-<p>台股加权指数也反映了全球投资者对台湾的信心。最近七年来，台股在亚股中涨幅最高，从2016年的8千多点，翻倍成长到近1万8千点。</p>
+<p>台股加权指数也反映了全球投资者对台湾的信心。最近七年来，台股在亚股中涨幅最高，从2016年的八千多点，翻倍成长到近一万八千点。</p>
 <p>台湾搞的是自由市场经济，市场在资源配置中起决定作用。因为尊重经济规律，台湾的经济充满生机与活力。</p>
 <p>台湾已被国际货币基金组织列入发达经济体，被世界银行列入高收入经济体。</p>
-<p>台湾已成为全球经济和科技供应链的关键领导者。<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8F%B0%E7%A7%AF%E7%94%B5.md#1">台积电</a>是全球最大的尖端芯片制造商。2023年，台积电的全球市场占有率高达58%，排名第一；台积电的市值高达5,349.8亿美元，全球排名第十，全亚洲排名第一。</p>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8F%B0%E7%A7%AF%E7%94%B5.md#1">台积电</a>被称为台湾的“护国神山”，受到国际社会的高度重视，已分别在美国、日本、德国投资设厂。</p>
+<p>台湾已成为全球经济和科技供应链的关键领导者。台积电是全球最大的尖端芯片制造商。2023年，台积电的全球市场占有率高达58%，排名第一；台积电的市值高达5,349.8亿美元，全球排名第十，全亚洲排名第一。</p>
+<p>台积电被称为台湾的“护国神山”，受到国际社会的高度重视，已分别在美国、日本、德国投资设厂。</p>
 <p>台积电创始人张忠谋谈到美国及其芯片制造盟友——荷兰、日本、韩国、台湾时说：“我们控制了咽喉点”。</p>
 <h2><strong>第三，台湾文化上异彩纷呈。</strong></h2>
 <p style="font-weight: 400;">台湾实行的是自由的经济政治制度，长期与以美国为首的自由世界互联互通，自由、民主、法治、人权等普世价值，在台湾已扎下了根。</p>
-<p style="font-weight: 400;">与此同时，台湾又是传统文化保存得比较好的地区。信神、敬神、忠、孝、仁、义、礼、智、信等<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E4%BB%B7%E5%80%BC.md#1">传统价值</a>深入人心，并内化在台湾人的日常生活之中，养成了台湾人平和、善良、利他的品性。</p>
+<p style="font-weight: 400;">与此同时，台湾又是传统文化保存得比较好的地区。信神、敬神、忠、孝、仁、义、礼、智、信等传统价值深入人心，并内化在台湾人的日常生活之中，养成了台湾人平和、善良、利他的品性。</p>
 <p style="font-weight: 400;">在台湾一地，能遍吃中国地道的八大菜系；打开台北地图，整个城市的街道，就是一幅中国地图；到高雄，从一心路到十全路，十条路的路名全来自中国传统典故；台北故宫博物馆、国父纪念馆、圆山饭店等，中国传统特色浓厚。</p>
 <p style="font-weight: 400;">台湾的音乐、舞蹈、绘画、电影、诗歌等，都包含着中国传统文化的积淀。林怀民创办的云门舞集，融合京剧、武术、太极、书法和现代舞蹈艺术等。云门之名就来自《吕氏春秋》中的一句话：“黄帝时，大容作云门”。</p>
 <p style="font-weight: 400;">以洪传中华五千年神传文化为宗旨的纽约神韵艺术团，从2007年4月7日第一次到台湾巡演后，除2020年因疫情影响外，年年到台湾巡回演出。</p>
@@ -42,7 +42,7 @@
 <p>中华民国是中国的合法政权。台湾的中华民国继承了这一法统。</p>
 <p>中共建立的政权一直不具合法性。中共是认外国人为老祖宗、以外国人的思想为指导思想、在外国人操纵下创办的一个外来党。1949年中共不择手段在中国大陆颠覆中华民国至今，没有搞过一次真正的民主选举，一直靠高压与欺骗维持极权统治，没有得到中国人民的合法授权。</p>
 <p>台湾的中华民国只要存在一天，中共的合法性就受到挑战一天。这是中共非要除掉台湾的中华民国最重要的原因之一。</p>
-<p>台湾尊崇<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E4%BB%B7%E5%80%BC.md#1">传统价值</a>与普世价值，中共信奉反传统价值和普世价值的马列主义。这两种价值观的根本对立，也是中共要灭掉中华民国的重要原因。</p>
+<p>台湾尊崇传统价值与普世价值，中共信奉反传统价值和普世价值的马列主义。这两种价值观的根本对立，也是中共要灭掉中华民国的重要原因。</p>
 <p>2020年，大瘟疫在全中国、全世界蔓延之际，中共在香港强推《港版国安法》，提前27年终结香港的“一国两制”。</p>
 <p>之后，中共把拿下台湾作为它的下一个战略目的，从军事、经济、政治、外交、旅游、文化、网络等各个方面，不断升级对台湾的文攻武吓。</p>
 <p>但是，如上所述，台湾在政治、经济、文化都有它独特的优势，被认为是世界上一股良善的力量。</p>
@@ -56,39 +56,35 @@
 <p>责任编辑：高义#</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/8/n14154041.md#1">王友群：中共加速台湾问题国际化</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/10/n14155496.md#1">王友群：中共干预台湾大选的九个手法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/15/n14159098.md#1">王友群：台湾主流民意与中共的谎言</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/18/n14161354.md#1">王友群：中共军队金门战役为何失败？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">Dockers 男士超细斜纹夹克 80%折扣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">更新：寒冷天小型电暖器 4折优惠</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141316.md#1">这些亚马逊好物 让你生活品质大提升</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135076.md#1">羊毛衫不缩水不掉色 这种洗衣液是关键</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/8/n14154041.md#1">王友群：中共加速台湾问题国际化</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/10/n14155496.md#1">王友群：中共干预台湾大选的九个手法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/15/n14159098.md#1">王友群：台湾主流民意与中共的谎言</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/18/n14161354.md#1">王友群：中共军队金门战役为何失败？</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/2/6/n11029000.md#1" target="_blank">林辉：救了毛周的人 结局大多很惨</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/8/31/n11489726.md#1" target="_blank">发生在两位西班牙人身上的奇迹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/15/n10785014.md#1" target="_blank">共产暴政录：镇压“反革命”运动</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/17/n11119803.md#1" target="_blank">见证奇迹 一位越南女子修炼法轮功的故事</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/9/n14154327.md#1">穿越时空而来 神秘赊刀人二则预言引起共振</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/2/n14149504.md#1">七旬老人的奇异经历</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/17/n14160054.md#1">英国空姐称机上拍到闪烁粉红色光不明物体</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/15/n14159079.md#1">【未解之谜】幽冥探秘</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/19/n14161718.md#1">【未解之谜】被锁在身体里的女孩</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/20/n14162739.md#1">【时事金扫描】米莱达沃斯踢馆 打脸社会主义者</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/20/n14162423.md#1">【菁英论坛】科兴下架 病毒专家接连暴亡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/21/n14163487.md#1">【人物真相】胡春华——储君变花瓶的归宿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/19/n14162260.md#1">为何Costco的一面落地镜引发网络热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/19/n14162305.md#1">谷歌华裔工程师殴打妻子致死 警称残忍</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/20/n14162839.md#1">中国经济持续下滑 深圳又一家老牌玩具大厂关停</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/19/n14162267.md#1">范冰冰再闯好莱坞 同框威尼斯影帝连姆·尼森</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/20/n14162818.md#1">李立群评《繁花》：30年前的上海不是这样</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/20/n14162215.md#1">《SPY x FAMILY CODE: White》影评：一家三口齐心协力 化解军方阴谋</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/19/n14162301.md#1">郑爽被强制执行近亿元后 逾千万元股权遭冻结</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/20/n14162845.md#1">被封杀2年半 如今晒旅游照 赵薇破轻生传言</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/29/n14145942.md#1">茶垢、水垢难去除？家事达人教你妙招清光光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/20/n14162704.md#1">床单多久清洗一次最合适？答案可能超出想像</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/17/n14159956.md#1">哪些水果对心脏好？护心抗老 中医荐4种超级水果?</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/18/n14161064.md#1">专家提醒：这11种物品切勿直接用水清洗</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/19/n14161940.md#1">这7个早上的习惯会让你焦虑 赶快改过来</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285334.md#1">【时事军事】空射版标准6 填补美军关键领域</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284972.md#1">【晚间新闻】华人教授被控诈骗1600万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285233.md#1">【时事金扫描】英国大变天 新首相曾两次访台</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283791.md#1">中国“快递一哥”顺丰负债千亿 流动资产仅百亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283914.md#1">令外籍人士最感幸福的10个国家 亚洲占半</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282587.md#1">北京等多地房价暴跌 分析：房市未见底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284692.md#1">胡歌携妻与香港艺人聚餐 老婆正面照首度曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283779.md#1">贝克汉姆夫妇庆银婚 身着25年前紫色礼服放闪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285195.md#1">26届台北电影奖完整名单 影帝阮经天影后林品彤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284348.md#1">《神偷奶爸4》影评 观众给最高 影评员给最低</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285307.md#1">上海开唱在高台上滑跪 刘德华因危险动作道歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284934.md#1">越吃越瘦？专家：“负热量食物”有助减重</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283587.md#1">除了保存食物的用途 冰箱也是料理“高手”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285552.md#1">在游泳池最容易得这三种病 千万要小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280741.md#1">新冠疫情来势汹汹 中医师教你这样预防与改善</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282156.md#1">想吃高纤早餐 教你这些创意点子</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/1/21/n14163556.htm">王友群：为何有一百多国政要祝贺台湾大选？</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/24/1/21/n14163556.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/24/1/21/n14163556.htm">王友群：为何有一百多国政要祝贺台湾大选？</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/1/21/n14163556.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
